--- a/index.html
+++ b/index.html
@@ -5,7 +5,84 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
+    <header>
+      <nav>
+        <ul class="site-navigation">
+          <li><a href="">ИНФОРМАЦИЯ</a></li>
+          <li><a href="">ФОТО И ВИДЕО</a></li>
+          <li><a href="">КАРТА ШТАТА</a></li>     
+          <li><a href="hotels.html">ГОСТИНИЦЫ</a></li> 
+        </ul>   
+        <a class="main-header-logo">
+        <img src="img/logo.svg" width="138" height="70" alt="Логотип сайта городка Седона"> 
+        </a> 
+      </nav>
+    </header>
+    <main>
+      <img src="img/main-img.png" width="1200" height="509" alt="Добро пожаловать в Седону">
+      <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <section>
+        <ul>
+          <li>НАСТОЯЩИЙ ГОРОДОК<br>-№1-<br>Седона - не аттракцион для туристов, там течёт своя жизнь</li>
+        </ul>   
+          <img src="img/1.png" width="800" height="256" alt="настоящий городок">
+      </section>
+      <section>
+        <ul>
+          <li><b>Жильё</b><br>Рекомендуем пожить в настоящем мотеле, всё как в кино!</li>
+          <li><b>Еда</b><br>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</li>
+          <li><b>Сувениры</b><br>Не только китайского, но и местного производства!</li>
+        </ul>
+      </section>
+      <section>
+        <img src="img/2.png" width="800" height="256" alt="мост дьявола">
+        <ul>  
+          <li>Там есть Мост дьявола <br>-№2-<br> Да, по нему можно пройти! Если конечно вы осмелитесь</li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li>Небольшая площадь<br>-№3-<br>все достопримечательности находятся очень близко</li>
+          <li>Красивая дорога<br>-№4-<br>ехать в седону из лас-вегаса совсем не скучно!</li>
+          <li>Мало туристов<br>-№5-<br>большинство едет в гранд каньон и толпится там</li>
+        </ul>
+      </section>  
+                  <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <section>
+        <p>поиск гостиниц в Седоне</p>
+        <p>
+          <label>Дата заезда:</label>
+          <input type="text" value="24 апреля 2017">
+        </p>
+        <p>
+          <label>Дата выезда:</label>
+          <input type="text" value="4 июля 2017">
+        </p>
+        <p>
+          <label>взрослые:</label>
+          <input type="text" value="2">
+          <label>дети:</label>
+          <input type="text" value="0">
+        </p>
+        <button type="submit" value="найти">
+        </button>
+        </section>
+            <img src="img/map.png" width="1119" height="594" alt="Карта Седоны">
+    </main> 
+    <footer>
+      <section>
+      <p>#visitsedona</p>
+      <p>тел:<a href="tel:+7(495)666-01-66"></a></p>
+      <a href="https://twitter.com/"></a>
+      <a href="https://www.facebook.com/"></a>
+      <a href="https://www.youtube.com/"></a>
+      <p>Website by:</p>
+      <a href="https://htmlacademy.ru/intensive/htmlcss"></a>
+      <img src="img/logo-htmlacademy.png" alt="Логотип HTML академии">
+      </section>
+      </footer>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
   </body>
