Правки по свойствам

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Отели-Седона</title>
-  <base href="https://htmlacademy-htmlcss.github.io/1494903-sedona-29/1/">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700& апdisplay=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,129 +13,129 @@
   <header class="main-header">
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li><a href="#" class="site-navigation">Информация</a></li>
-        <li><a href="#" class="site-navigation">Фото и видео</a></li>
-        <li><a href="#" class="site-navigation">Карта штата</a></li>
-        <li><a href="hotels.html" class="site-navigation">Гостиницы</a></li>
+        <li><a href="#" class="site-navigation-link">Информация</a></li>
+        <li><a href="#" class="site-navigation-link">Фото и видео</a></li>
+        <li><a href="#" class="site-navigation-link">Карта штата</a></li>
+        <li><a href="hotels.html" class="site-navigation-link">Гостиницы</a></li>
       </ul>
       <a class="main-header-logo">
         <img src="#" width="138" height="70" alt="Логотип сайта городка Седона">
       </a>
     </nav>
   </header>
+
   <main class="main-content">
     <img src="#" width="1200" height="509" alt="Добро пожаловать в Седону">
     <h1 class="main-content-headline">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-    <p class="text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+    <p class="text text-content-headline">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 
-    <div class="text-white">
-      <p class="text-white">Настоящий городок</p>
-      <snap class="text-white-number">-№1-</snap>
-      <p class="text-white-about">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+    <div class="info-block">
+      <h2 class="content-title content-title-white info-block-title">Настоящий городок</h3>
+        <span class="text-white-number">-№1-</span>
+        <p class="text text-white info-block-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
     </div>
 
     <img src="#" width="800" height="256" alt="Настоящий городок">
 
-    <div class="text-black">
-      <span class="text-black">Жильё</span>
-      <p class="text-black-about">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-    </div>
-    <div class="text-black">
-      <span class="text-black">Еда</span>
-      <p class="text-black-about">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-    </div>
-    <div class="text-black">
-      <span class="text-black">Сувениры</span>
-      <p class="text-black-about">Не только китайского, но и местного производства!</p>
-    </div>
+    <ul class="advantages">
+      <li class="advantages-item">
+        <h3 class="advantages-title">Жильё</h3>
+        <p class="advantages-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+      </li>
+      <li class="advantages-item">
+        <h3 class="advantages-title">Еда</h3>
+        <p class="advantages-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+      </li>
+      <li class="advantages-item">
+        <h3 class="advantages-title">Сувениры</h3>
+        <p class="advantages-text">Не только китайского, но и местного производства!</p>
+      </li>
+    </ul>
 
     <img src="#" width="800" height="256" alt="мост дьявола">
 
-    <div class="text-white">
-      <p class="text-white">Там есть Мост дьявола</p>
-      <snap class="text-white-number">-№2-</snap>
-      <p class="text-white-about">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+    <div class="info-block">
+      <h2 class="content-title content-title-white info-block-title">Там есть Мост дьявола</h2>
+      <span class="text-white-number">-№2-</span>
+      <p class="text text-white info-block-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
     </div>
 
     <section class="reasons">
 
-      <div class="text-black">
-        <p class="text-black">Небольшая площадь</p>
-        <snap class="text-black-number">-№3-</snap>
-        <p class="text-black-about">все достопримечательности находятся очень близко</p>
+      <div class="info-block-black">
+        <h3 class="content-title content-title-black info-block-title-black">Небольшая площадь</h3>
+        <span class="text-black-number">-№3-</span>
+        <p class="text text-black info-block-text-black">все достопримечательности находятся очень близко</p>
       </div>
 
-      <div class="text-black">
-        <p class="text-black">Красивая дорога</p>
-        <snap class="text-black-number">-№4-</snap>
-        <p class="text-black-about">ехать в Седону из лас-вегаса совсем не скучно!</p>
+      <div class="info-block-black">
+        <h3 class="content-title content-title-black info-block-title-black">Красивая дорога</h3>
+        <span class="text-black-number">-№4-</span>
+        <p class="text text-black info-block-text-black">ехать в Седону из лас-вегаса совсем не скучно!</p>
       </div>
 
-      <div class="text-black">
-        <p class="text-black">Мало туристов</p>
-        <snap class="text-black-number">-№5-</snap>
-        <p class="text-black-about">большинство едет в гранд каньон и толпится там</p>
+      <div class="info-block-black">
+        <h3 class="content-title content-title-black info-block-title-black">Мало туристов</h3>
+        <span class="text-black-number">-№5-</span>
+        <p class="text text-black info-block-text-black">большинство едет в гранд каньон и толпится там</p>
       </div>
 
     </section>
 
     <section class="booking">
-      <h2 class="booking">Заинтересовались?</h2>
-      <p class="text-black-about">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
+      <h4 class="text booking-title">Заинтересовались?</h4>
+      <p class="text text-black info-block-text-black">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+        предложения гостиниц в
         Седоне</p>
-
-      <button type="submit-header">Поиск гостиниц в Седоне</button>
-      <p class="variables">
-        <label class="variables">Дата заезда:</label>
-        <input type="data" value="24 апреля 2017">
-      </p>
-      <p class="variables">
-        <label class="variables">Дата выезда:</label>
-        <input type="data" value="4 июля 2017">
-      </p>
-      <p class="variables">
-        <label class="variables">Взрослые:</label>
-        <button class="btn minus-btn" type="button">
-          <i class="icon-minus"></i>
-        </button>
-        <input type="data" value="2">
-        <button class="btn plus-btn" type="button">
-          <i class="icon-plus"></i>
-        </button>
-        <label class="variables">Дети:</label>
-        <button class="btn minus-btn" type="button">
-          <i class="icon-minus"></i>
-        </button>
-        <input type="data" value="0">
-        <button class="btn plus-btn" type="button">
-          <i class="icon-plus"></i>
-        </button>
-      </p>
-      <button type="submit">Найти</button>
-
+      <! -- Здесь будет форма поиска гостиниц -->
+        <button type="submit-header">Поиск гостиниц в Седоне</button>
+        <p class="variables">
+          <label class="variables">Дата заезда:</label>
+          <input type="data" value="24 апреля 2017">
+        </p>
+        <p class="variables">
+          <label class="variables">Дата выезда:</label>
+          <input type="data" value="4 июля 2017">
+        </p>
+        <p class="variables">
+          <label class="variables">Взрослые:</label>
+          <input type="data" value="2">
+          <label class="variables">Дети:</label>
+          <input type="data" value="0">
+        </p>
+        <button type="submit">Найти</button>
     </section>
-    <section class="modal">
-      <img src="#" width="1119" height="594" alt="Карта Седоны">
-    </section>
+
+    <img src="#" width="1119" height="594" alt="Карта Седоны">
+
 
   </main>
 
-  <footer class="page-footer main-footer">
+  <footer class="main-footer">
 
-    <p class="contact">#visitsedona</p>
-
-    <div class="contact">
-      <p class="contact">тел:<a href="tel:+7(495)666-01-66" class="contact"> tel:+7(495)666-01-66</a></p>
-      <ul class="social-button">
-        <li><a class="social-button" href="#">twitter</a></li>
-        <li><a class="social-button" href="#">facebook</a></li>
-        <li><a class="social-button" href="#">youtube</a></li>
-      </ul>
+    <div class="contacts">
+      <p class="contacts-text">#visitsedona</p>
+      <p class="contacts-text">тел:
+        <a href="tel:+7(495)666-01-66" class="contacts-link"> tel:+7(495)666-01-66</a>
+      </p>
     </div>
 
-    <div class="htmlacademy-blok">
-      <span class="htmlacademy-blok">Website by:</span>
-      <a href="https://htmlacademy.ru/intensive/htmlcss" class="htmlacademy-blok-link"><img src="#"
+    <ul class="socials">
+      <li class="socials-item">
+        <a class="socials-link" href="#">twitter</a>
+      </li>
+      <li class="socials-item">
+        <a class="socials-link" href="#">facebook</a>
+      </li>
+      <li class="socials-item">
+        <a class="socials-link" href="#">youtube</a>
+      </li>
+    </ul>
+
+
+    <div class="author">
+      <span class="author">Website by:</span>
+      <a href="https://htmlacademy.ru/intensive/htmlcss" class="author-link"><img src="#"
           alt="Логотип HTML академии"></a>
     </div>
 
