--- a/hotels.html
+++ b/hotels.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Отели-Седона</title>
+  <title>HTML Academy: Отели</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700& апdisplay=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
@@ -11,7 +11,7 @@
 
 <body>
   <header class="main-header">
-    <nav class="main-navigation">
+    <nav class="navigation">
       <ul class="site-navigation">
         <li><a href="#" class="site-navigation-link">Информация</a></li>
         <li><a href="#" class="site-navigation-link">Фото и видео</a></li>
@@ -19,131 +19,130 @@
         <li><a href="hotels.html" class="site-navigation-link">Гостиницы</a></li>
       </ul>
       <a class="main-header-logo">
-        <img src="#" width="138" height="70" alt="Логотип сайта городка Седона">
+        <img a href="#" src="#" width="138" height="70" alt="Логотип сайта городка Седона">
       </a>
     </nav>
   </header>
 
-  <main>
-    <form>
-      <fieldset>
-        <legend class="features">Инфраструктура:</legend>
-        <input type="checkbox" class="text text-white"> Бассейн
-        <input type="checkbox" class="text text-white"> Парковка
-        <input type="checkbox" class="text text-white"> wi-fi
-      </fieldset>
-      <fieldset>
-        <legend class="features">Тип жилья:</legend>
-        <input type="checkbox" class="text text-white"> Гостиница
-        <input type="checkbox" class="text text-white"> Мотель
-        <input type="checkbox" class="text text-white"> Апартаменты
-      </fieldset>
-      <p class="features">Стоимость в сутки(р):
-        <input type="checkbox" class="text text-white"> 0
-        <input type="checkbox" class="text text-white"> 3000
-      </p>
-      <div class="slidecontainer">
-        <input type="range" min="1" max="3000" class="slider">
-      </div>
-      <button type="submit" class="text text-white">Показать</button>
-    </form>
-    <h1 class="main-content-headline">Найдено:3</h1>
-    <p class="sort-text">Сортировка:</p>
-    <ul>
+  <main class="main-content">
+    <article class="housing-parameters text-white">
+      <!-- ФОРМА инфраструктура и типы жилья-->
+      <form action="" method="get">
+        <fieldset>
+          <legend class="infrastructure-title">Инфраструктура:</legend>
+          <label><input type="checkbox" name="infrastructure" checked name="pool" class="infrastructure-text">
+            Бассейн</label>
+          <label><input type="checkbox" name="infrastructure" name="parking" class="infrastructure-text">
+            Парковка</label>
+          <label><input type="checkbox" name="infrastructure" name="wi-fi" class="infrastructure-text"> wi-fi</label>
+        </fieldset>
+        <fieldset>
+          <legend class="type-of-housing-title">Тип жилья:</legend>
+          <label><input type="checkbox" name="type-of-housing" checked name="hotel"
+              class="type-of-housing-text">Гостиница</label>
+          <label><input type="checkbox" name="type-of-housing" checked name="motel" class="type-of-housing-text">
+            Мотель</label>
+          <label><input type="checkbox" name="type-of-housing" checked name="apartments"
+              class="type-of-housing-text">Апартаменты</label>
+        </fieldset>
+      </form>
+
+      <!-- ФОРМА слайдер с фильтром стоимости жилья -->
+      <form action="#" method="get">
+        <!--Может быть здесь таблица?-->
+        <legend class="prise-slider-title">Стоимость в сутки(р):</legend>
+        <label><input type="text" value="от 0"></label>
+        <label><input type="text" value="до 3000"></label>
+        <div class="slider">
+          <input type="range" min="1" max="3000" step="1" class="slider">
+        </div>
+        <button class="show-button text-white" type="button">Показать</button>
+      </form>
+    </article>
+    <div class="sorting">
+      <h1 class="sorting-title">Найдено:3</h1>
+      <p class="sorting-subtitle">Сортировка:</p>
+      <ul class="sorting-text-item">
+        <li>
+          <!-- Меняет цвет при наведении на голубой-->
+          <a class="sorting-text-item" href="">По цене</a>
+        </li>
+        <li>
+          <a class="sorting-text-item" href="">По типу</a>
+        </li>
+        <li>
+          <a class="sorting-text-item" href="">По рейтингу</a>
+        </li>
+      </ul>
+    </div>
+    <ul class="up-and-down">
       <li>
-        <a class="sort-text-item" href="">По цене</a>
+        <a href=""><img src="" width="11" height="10" alt="Icon up"></a>
       </li>
       <li>
-        <a class="sort-text-item" href="">По типу</a>
-      </li>
-      <li>
-        <a class="sort-text-item" href="">По рейтингу</a>
+        <a href=""><img src="" width="11" height="10" alt="Icon down"></a>
       </li>
     </ul>
 
-    <ul>
+    <ul class="hotel-results">
       <li>
-        <a href="">
-          <p>
-            <img src="" width="11" height="10" alt="Icon up">
-          </p>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <p>
-            <img src="" width="11" height="10" alt="Icon down">
-          </p>
-        </a>
-      </li>
-    </ul>
-    <ul class="text">
-      <li>
-        <a href="">
-          <p>
-            <img src="" width="135" height="90" alt="Amara Resort & Spa">
-          </p>
+        <a href=""><img src="" width="135" height="90" alt="Amara Resort & Spa">
           <h2 class="hotel-items">Amara Resort & Spa</h2>
         </a>
-        <p class="text">
-          Гостиница
-          <button class="text-white" type="button">Подробнее</button>
-        </p>
-        <p class="text">
-          от 4000 р
-          <button class="text-white brown-backgrownd" type="button">Забронировать</button>
-        </p>
-        <p class="text-grey">
-          Рейтинг:8,5
-        </p>
+        <span>Гостиница</span>
+        <span>от 4000 р</span>
+        <button class="detail-button text-white" type="button">Подробнее</button>
+        <button class="booking-button text-white" type="button">Забронировать</button>
+        <div class="hotel-rating">
+          <img src="" width="19" height="17">
+          <img src="" width="19" height="17">
+          <img src="" width="19" height="17">
+          <img src="" width="19" height="17">
+          <span class="rating">Рейтинг:8,5</span>
+        </div>
       </li>
       <li>
         <a href="">
-          <p>
-            <img src="" width="135" height="90" alt="Desert Quail Inn">
-          </p>
+          <img src="" width="135" height="90" alt="Desert Quail Inn">
           <h2 class="hotel-items">Desert Quail Inn</h2>
         </a>
-        <p class="text">
-          Мотель
-          <button class="text-white" type="button">Подробнее</button>
-        </p>
-        <p class="text">
-          от 3000 р
-          <button class="text-white brown-backgrownd" type="button">Забронировать</button>
-        </p>
-        <p class="text-grey">
-          Рейтинг:8,9
-        </p>
+        <span>Мотель</span>
+        <span>от 3000 р</span>
+        <button class="detail-button text-white" type="button">Подробнее</button>
+        <button class="booking-button text-white" type="button">Забронировать</button>
+        <div class="hotel-rating">
+          <img src="" width="19" height="17">
+          <img src="" width="19" height="17">
+          <img src="" width="19" height="17">
+          <span class="rating">Рейтинг:8,9</span>
+        </div>
       </li>
       <li>
         <a href="">
-          <p>
-            <img src="" width="135" height="90" alt="Villas at Poco Diablo">
-          </p>
+          <img src="" width="135" height="90" alt="Villas at Poco Diablo">
           <h2 class="hotel-items">Villas at Poco Diablo</h2>
         </a>
-        <p class="text">
-          Апартаменты
-          <button class="text-white" type="button">Подробнее</button>
-        </p>
-        <p class="text">
-          от 2000 р
-          <button class="text-white brown-backgrownd" type="button">Забронировать</button>
-        </p>
-        <p class="text-grey">
-          Рейтинг:9,2
-        </p>
+        <span>Апартаменты</span>
+        <span>от 2000 р</span>
+        <button class="detail-button text-white" type="button">Подробнее</button>
+        <button class="booking-button text-white" type="button">Забронировать</button>
+        <div class="hotel-rating">
+          <img src="" width="19" height="17">
+          <img src="" width="19" height="17">
+          <span class="rating">Рейтинг:9,2</span>
+        </div>
       </li>
     </ul>
   </main>
   <footer class="main-footer">
+
     <div class="contacts">
       <p class="contacts-text">#visitsedona</p>
       <p class="contacts-text">тел:
-        <a href="tel:+7(495)666-01-66" class="contacts-link"> tel:+7(495)666-01-66</a>
+        <a href="tel:+7(495)666-01-66" class="contacts-link"> +7(495)666-01-66</a>
       </p>
     </div>
+
     <ul class="socials">
       <li class="socials-item">
         <a class="socials-link" href="#">twitter</a>
@@ -155,11 +154,13 @@
         <a class="socials-link" href="#">youtube</a>
       </li>
     </ul>
+
     <div class="author">
       <span class="author">Website by:</span>
       <a href="https://htmlacademy.ru/intensive/htmlcss" class="author-link"><img src="#"
           alt="Логотип HTML академии"></a>
     </div>
+
   </footer>
 
 </html>
